--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
   ],
   "scripts": {},
   "dependencies": {
-    "webcam-directive": "3.1.*"
+    "webcam-directive": "akitabox/webcam-directive#master"
   },
   "devDependencies": {}
 }
